--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -21,7 +21,6 @@
     "lintdiff": "git diff --name-only --cached --relative | grep '\\.js$' | xargs standard | snazzy",
     "fixcode": "standard --fix",
     <%_ } _%>
-    "storybook": "storybook start -p 7007",
     "postinstall": "patch-package"
   },
   "dependencies": {
@@ -52,10 +51,9 @@
     "tcomb-form-native": "0.6.20"
   },
   "devDependencies": {
-    "@storybook/addons": "5.1.9",
-    "@storybook/addon-storyshots": "5.1.9",
-    "@storybook/channels": "5.1.9",
-    "@storybook/react-native": "5.1.9",
+    "@storybook/addons": "5.1.11",
+    "@storybook/react-native": "5.1.11",
+    "@storybook/theming": "5.1.11",
     "@babel/core": "7.5.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-preset-env": "1.7.0",
