--- a/boilerplate/test/setup.js.ejs
+++ b/boilerplate/test/setup.js.ejs
@@ -21,5 +21,7 @@ jest
   })
 <%_ } _%>
   .mock('react-native-vector-icons/FontAwesome', () => 'Icon')
-
+  .mock('@storybook/react-native', () => {
+    return { getStorybookUI: jest.fn(), configure: jest.fn() }
+  })
 console.tron = { log: () => {}, display: () => {} }
