migrate to the eslint config supplied by react-native-init

--- a/boilerplate/app/navigation/layouts.js.ejs
+++ b/boilerplate/app/navigation/layouts.js.ejs
@@ -99,7 +99,7 @@ function handleOpenURL (event) {
   if (importantParameters.length === 1) {
     switch (importantParameters[0]) {
       case 'register':
-        console.tron.log(`Sending to Register Page`)
+        console.tron.log('Sending to Register Page')
         registerScreen()
         break
       default:
