--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -13,14 +13,9 @@
     "android:devices": "$ANDROID_HOME/platform-tools/adb devices",
     "android:logcat": "$ANDROID_HOME/platform-tools/adb logcat *:S ReactNative:V ReactNativeJS:V",
     "android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82",
-    "precommit": "npm run git-hook",
-    "prepush": "npm run git-hook",
-    "git-hook": "npm test -s",
-    <%_ if (!props.skipLint) { _%>
-    "lint": "standard --verbose | snazzy",
-    "lintdiff": "git diff --name-only --cached --relative | grep '\\.js$' | xargs standard | snazzy",
-    "fixcode": "standard --fix",
-    <%_ } _%>
+    "lint": "eslint app test index.js --ext .js",
+    "prettier": "prettier --write \"app/**/*.js\" \"test/**/*.js\" index.js",
+    "precommit": "lint-staged",
     "postinstall": "patch-package"
   },
   "dependencies": {
@@ -62,6 +57,8 @@
     "enzyme-adapter-react-16": "1.14.0",
     "ignite-jhipster": "<%= props.packageVersion %>",
     "jest": "24.9.0",
+    "@react-native-community/eslint-config": "0.0.5",
+    "lint-staged": "9.2.3",
     <%_ if (props.authType === 'oauth2') { _%>
     "react-native-app-auth": "4.4.0",
     <%_ } _%>
@@ -75,17 +72,19 @@
     "reactotron-react-native": "3.6.5",
     "reactotron-redux": "3.1.1",
     "reactotron-redux-saga": "4.2.2",
-    <%_ if (!props.skipLint) { _%>
-    "babel-eslint": "10.0.2",
-    "snazzy": "8.0.0",
-    "standard": "12.0.1",
-    <%_ } _%>
     "patch-package": "6.1.2",
     "rimraf": "3.0.0"
   },
+  "lint-staged": {
+    "{,app/**/,test/**/}*.{js}": [
+      "prettier --write",
+      "eslint --fix --ext .js",
+      "git add"
+    ]
+  },
   "jest": {
     "testMatch": [
-      "**/Tests/**/*.js",
+      "**/test/**/*.js",
       "**/?(*.)(spec|test).js?(x)"
     ],
     "testPathIgnorePatterns":[
@@ -113,36 +112,6 @@
     ],
     "preset": "react-native"
   },
-  <%_ if (!props.skipLint) { _%>
-  "standard": {
-    "parser": "babel-eslint",
-    "globals": [
-      "describe",
-      "test",
-      "jest",
-      "expect",
-      "fetch",
-      "navigator",
-      "__DEV__",
-      "XMLHttpRequest",
-      "FormData",
-      "React$Element",
-      "element",
-      "by",
-      "beforeEach",
-      "device",
-      "it",
-      "before",
-      "after",
-      "afterEach",
-      "waitFor"
-    ],
-    "ignore": [
-      "ignite/**",
-      "metro.config.js"
-    ]
-  },
-  <%_ } _%>
   <%_ if (props.detox) { _%>
   "detox": {
     "configurations": {
