--- a/templates/entity/entity-flatlist.js.ejs
+++ b/templates/entity/entity-flatlist.js.ejs
@@ -32,6 +32,7 @@ class <%= props.name %>EntityScreen extends React.PureComponent {
       <%_ } _%>
       dataObjects: []
     }
+    this.fetch<%= props.pluralName %>()
   }
 
   navigationButtonPressed ({ buttonId }) {
@@ -137,17 +138,14 @@ class <%= props.name %>EntityScreen extends React.PureComponent {
     })
   }
 
-  componentWillReceiveProps (newProps) {
-    if (newProps.<%= camelCase(props.pluralName) %>) {
+
+  componentDidUpdate(prevProps, prevState){
+    if (this.props.<%= camelCase(props.pluralName) %> && prevProps.<%= camelCase(props.pluralName) %> !== this.props.<%= camelCase(props.pluralName) %>) {
       this.setState({
         done: newProps.<%= camelCase(props.pluralName) %>.length < this.state.size,
         dataObjects: [...this.state.dataObjects, ...newProps.<%= camelCase(props.pluralName) %>]
       })
     }
-  }
-
-  componentWillMount () {
-    this.fetch<%= props.pluralName %>()
   }
 
   render () {
