--- a/templates/entity/entity-flatlist.js.ejs
+++ b/templates/entity/entity-flatlist.js.ejs
@@ -138,13 +138,14 @@ class <%= props.name %>EntityScreen extends React.PureComponent {
     })
   }
 
-  componentDidUpdate(prevProps, prevState){
-    if (this.props.<%= camelCase(props.pluralName) %> && prevProps.<%= camelCase(props.pluralName) %> !== this.props.<%= camelCase(props.pluralName) %>) {
-      this.setState({
-        done: this.props.<%= camelCase(props.pluralName) %>.length < this.state.size,
-        dataObjects: [...this.state.dataObjects, ...this.props.<%= camelCase(props.pluralName) %>]
-      })
+  static getDerivedStateFromProps(nextProps, prevState){
+    if (nextProps.<%= camelCase(props.pluralName) %>) {
+      return {
+        done: nextProps.<%= camelCase(props.pluralName) %>.length < prevState.size,
+        dataObjects: [...prevState.dataObjects, ...nextProps.<%= camelCase(props.pluralName) %>],
+      }
     }
+    return null
   }
 
   render () {
